[tool.poetry]
name = "users"
version = "0.1.0"
description = "Users for the cookies social network"
authors = ["FrozZzy1 <frozzzy71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
databases = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
